# meritrank-psql-connector

./: 20_pgmer2.sh  Cargo.toml  Dockerfile  README.md  generate_scripts.sh
.github/workflows/: build_and_test.yml
sql/: pgmer2--0.3.1--0.3.2.sql  pgmer2--0.3.3--0.3.4.sql  pgmer2--0.3.3--0.3.6.sql  pgmer2--0.3.4--0.3.5.sql  pgmer2--0.3.4--0.3.6.sql  pgmer2--0.3.4--0.3.7.sql  pgmer2--0.3.5--0.3.8.sql  pgmer2--0.3.8--0.3.9.sql  pgmer2--0.3.9--0.3.10.sql
src/: lib.rs  testing.rs
