[package]
name = "pgmer2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
shared = []
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pgrx_test = []

[dependencies]
pgrx = "0.11.2"
nng = "1.0.1"
rmp-serde = "1.1.2"
serde = "1.0.193"
lazy_static = "1.4"

dotenv = { version = "0.15.0" }

[dev-dependencies]
pgrx-tests = "=0.11.2"
